--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.1.1",
     "@material-ui/icons": "^4.2.0",
     "axios": "^0.19.0",
+    "downshift": "^3.2.10",
     "immer": "^3.1.3",
     "lodash": "^4.17.11",
     "normalizr": "^3.4.0",
