--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.3.1",
+    "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
-    "downshift": "^3.2.10",
+    "downshift": "^3.2.12",
     "immer": "^3.2.0",
     "lodash": "^4.17.15",
-    "normalizr": "^3.4.0",
+    "normalizr": "^3.4.1",
     "query-string": "^6.8.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-infinite-scroll-hook": "^2.0.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "resize-observer-polyfill": "^1.5.1"
