--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-full-screen": "^0.2.4",
+    "react-hotkeys": "^2.0.0",
     "react-infinite-scroll-hook": "^2.0.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
