--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "redux": "^4.0.4",
-    "resize-observer-polyfill": "^1.5.1"
+    "redux-observable": "^1.2.0",
+    "resize-observer-polyfill": "^1.5.1",
+    "rxjs": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
