--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.6.1",
+    "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "@reduxjs/toolkit": "^1.0.4",
     "axios": "^0.19.0",
-    "downshift": "^3.4.1",
+    "downshift": "^3.4.4",
     "immer": "^5.0.0",
     "lodash": "^4.17.15",
     "normalizr": "^3.4.1",
@@ -46,7 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
-  }
+  "devDependencies": {}
 }
