--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "^3.2.0",
     "redux": "^4.0.4",
     "redux-observable": "^1.2.0",
+    "redux-saga": "^1.1.3",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^6.5.3"
   },
